deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service
spec:
  selector:
    matchLabels:
      run: node-service  # Cambiado de desunode a node-service
  replicas: 1
  template:
    metadata:
      labels:
        run: node-service  # Cambiado de desunode a node-service
    spec:
      containers:
      - name: node-service  # Cambiado de desunode a node-service
        image: silencfox/devsudemo:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api/users
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 5
        tcpSocket:
          port: 8000
        initialDelaySeconds: 30
        periodSeconds: 5
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
