deployment/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service2
  namespace: devsu
spec:
  selector:
    matchLabels:
      run: node-service2 
  replicas: 2
  template:
    metadata:
      labels:
        run: node-service2 
    spec:
      containers:
      - name: node-service2  
#        image: acrdevsu.azurecr.io/devsudemo:latest
        image: silencfox/devsudemo:latest
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
          requests:
            cpu: 200m
            memory: 100Mi

        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api/users
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 60
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /api/users
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 60
          failureThreshold: 3
      automountServiceAccountToken: false
