deployment/03-service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service-v1
spec:
  selector:
    app: node-app-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
