deployment/04-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service-v2
spec:
  selector:
    app: node-app-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
