deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: desunode
 labels:
   run: desunode
spec:
 ports:
 - port: 8000
 selector:
   run: desunode
