deployment/service_balance.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    run: node-service  # Cambiado de desunode a node-service
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 31110
