deployment/service_balance2.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service2
spec:
  selector:
    run: node-service  
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 31110
