deployment/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  labels:
    run: node-service  # Cambiado de desunode a node-service
spec:
  type: NodePort
  selector:
    run: node-service  # Cambiado de desunode a node-service
  ports:
    - port: 8000
      targetPort: 8000
