deployment/06-ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-qa"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - v1.devsutestalcala.local
    - v2.devsutestalcala.local
    secretName: cert-tls
  rules:
  - host: v1.devsutestalcala.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: node-service-v1
            port:
              number: 80
        
  - host: v2.devsutestalcala.local 
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: node-service-v2
            port:
              number: 80
