deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-ingress
spec:
  rules:
  - host: devsutest.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: node-service2
            port:
              number: 8000
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 8000
